--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         for a big company. This was one of the best investments I’ve made in myself. ”</p>
     </div>
 
-    <div class="card card-3" id="light-bg">
+    <div class="card card-3 light-bg">
       <div class="profile row">
         <img src="images/image-jeanette.jpg" alt="">
         <div class="profile-text">
@@ -85,7 +85,7 @@
         an incredible community of smart and amazing people. ”</p>
     </div>
 
-    <div class="card card-5" id="light-bg">
+    <div class="card card-5 light-bg">
       <div class="profile row">
         <img src="images/image-kira.jpg" alt="">
         <div class="profile-text">
